// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubPagesDeployStep can be added as post-deployment step to CDK Pipeline 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - run: npx projen install:ci
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.6.2
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v5
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-prod:
    name: Deploy stage prod to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
      pages: write
    concurrency:
      group: deploy-prod
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v5
      - name: Download Artifact
        uses: actions/download-artifact@v5
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen deploy:prod
      - name: Build Documentation
        run: npm run build:api-docs
      - name: Add Custom Domain
        run: echo "api.example.com" > api-docs/CNAME
      - name: Upload Pages Artifact
        uses: actions/upload-pages-artifact@v3
        with:
          path: api-docs
          name: github-pages
      - name: Deploy to GitHub Pages
        id: deployment
        uses: actions/deploy-pages@v4
        with:
          artifact_name: github-pages
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.6.2
        with:
          name: cdk-outputs-prod
          path: cdk-outputs-prod.json
"
`;

exports[`GithubPagesDeployStep generates correct configuration with all options 1`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "yarn build:documentation",
    "echo "Documentation built in build/docs"",
    "echo "Note: Bash deployment to GitHub Pages is not supported. Use GitHub Actions."",
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with all options 2`] = `
{
  "env": {},
  "needs": [],
  "permissions": {
    "contents": "read",
    "idToken": "write",
    "pages": "write",
  },
  "steps": [
    {
      "name": "Build Documentation",
      "run": "yarn build:documentation",
    },
    {
      "name": "Add Custom Domain",
      "run": "echo "documentation.mycompany.com" > build/docs/CNAME",
    },
    {
      "name": "Upload Pages Artifact",
      "uses": "actions/upload-pages-artifact@v3",
      "with": {
        "name": "my-docs-artifact",
        "path": "build/docs",
      },
    },
    {
      "id": "deployment",
      "name": "Deploy to GitHub Pages",
      "uses": "actions/deploy-pages@v4",
      "with": {
        "artifact_name": "my-docs-artifact",
      },
    },
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with all options 3`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "yarn build:documentation",
    "echo "Preparing documentation for GitLab Pages..."",
    "rm -rf public",
    "cp -r build/docs public",
    "echo "documentation.mycompany.com" > public/CNAME",
  ],
  "env": {},
  "extensions": [],
  "needs": [],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with custom docs folder 1`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "pnpm build:docs",
    "echo "Documentation built in dist/docs"",
    "echo "Note: Bash deployment to GitHub Pages is not supported. Use GitHub Actions."",
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with custom docs folder 2`] = `
{
  "env": {},
  "needs": [],
  "permissions": {
    "contents": "read",
    "idToken": "write",
    "pages": "write",
  },
  "steps": [
    {
      "name": "Build Documentation",
      "run": "pnpm build:docs",
    },
    {
      "name": "Upload Pages Artifact",
      "uses": "actions/upload-pages-artifact@v3",
      "with": {
        "name": "github-pages",
        "path": "dist/docs",
      },
    },
    {
      "id": "deployment",
      "name": "Deploy to GitHub Pages",
      "uses": "actions/deploy-pages@v4",
      "with": {
        "artifact_name": "github-pages",
      },
    },
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with custom docs folder 3`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "pnpm build:docs",
    "echo "Preparing documentation for GitLab Pages..."",
    "rm -rf public",
    "cp -r dist/docs public",
  ],
  "env": {},
  "extensions": [],
  "needs": [],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with custom domain 1`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "npm run generate:docs",
    "echo "Documentation built in public"",
    "echo "Note: Bash deployment to GitHub Pages is not supported. Use GitHub Actions."",
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with custom domain 2`] = `
{
  "env": {},
  "needs": [],
  "permissions": {
    "contents": "read",
    "idToken": "write",
    "pages": "write",
  },
  "steps": [
    {
      "name": "Build Documentation",
      "run": "npm run generate:docs",
    },
    {
      "name": "Add Custom Domain",
      "run": "echo "docs.example.com" > public/CNAME",
    },
    {
      "name": "Upload Pages Artifact",
      "uses": "actions/upload-pages-artifact@v3",
      "with": {
        "name": "github-pages",
        "path": "public",
      },
    },
    {
      "id": "deployment",
      "name": "Deploy to GitHub Pages",
      "uses": "actions/deploy-pages@v4",
      "with": {
        "artifact_name": "github-pages",
      },
    },
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with custom domain 3`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "npm run generate:docs",
    "echo "Preparing documentation for GitLab Pages..."",
    "rm -rf public",
    "cp -r public public",
    "echo "docs.example.com" > public/CNAME",
  ],
  "env": {},
  "extensions": [],
  "needs": [],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with defaults 1`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "npm run build:docs",
    "echo "Documentation built in docs"",
    "echo "Note: Bash deployment to GitHub Pages is not supported. Use GitHub Actions."",
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with defaults 2`] = `
{
  "env": {},
  "needs": [],
  "permissions": {
    "contents": "read",
    "idToken": "write",
    "pages": "write",
  },
  "steps": [
    {
      "name": "Build Documentation",
      "run": "npm run build:docs",
    },
    {
      "name": "Upload Pages Artifact",
      "uses": "actions/upload-pages-artifact@v3",
      "with": {
        "name": "github-pages",
        "path": "docs",
      },
    },
    {
      "id": "deployment",
      "name": "Deploy to GitHub Pages",
      "uses": "actions/deploy-pages@v4",
      "with": {
        "artifact_name": "github-pages",
      },
    },
  ],
}
`;

exports[`GithubPagesDeployStep generates correct configuration with defaults 3`] = `
{
  "commands": [
    "echo "Building documentation..."",
    "npm run build:docs",
    "echo "Preparing documentation for GitLab Pages..."",
    "rm -rf public",
    "cp -r docs public",
  ],
  "env": {},
  "extensions": [],
  "needs": [],
}
`;

exports[`GithubPagesDeployStep supports deployment without custom domain 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - run: npx projen install:ci
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.6.2
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v5
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v5
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-production:
    name: Deploy stage production to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
      pages: write
    concurrency:
      group: deploy-production
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v5
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v5
      - name: Download Artifact
        uses: actions/download-artifact@v5
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v5
        with:
          role-to-assume: arn:aws:iam::123456789012:role/DeploymentRole
          role-session-name: GitHubAction
          aws-region: eu-west-1
      - run: npx projen deploy:production
      - name: Build Documentation
        run: npx typedoc
      - name: Upload Pages Artifact
        uses: actions/upload-pages-artifact@v3
        with:
          path: docs
          name: github-pages
      - name: Deploy to GitHub Pages
        id: deployment
        uses: actions/deploy-pages@v4
        with:
          artifact_name: github-pages
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.6.2
        with:
          name: cdk-outputs-production
          path: cdk-outputs-production.json
"
`;
